--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,13 @@
       k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
    
-      ym(91198106, "init", {
+      ym(91198556, "init", {
            clickmap:true,
            trackLinks:true,
            accurateTrackBounce:true,
-           webvisor:true,
-           ecommerce:"dataLayer"
+           webvisor:true
       });
    </script>
-   <noscript><div><img src="https://mc.yandex.ru/watch/91198106" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+   <noscript><div><img src="https://mc.yandex.ru/watch/91198556" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
